# aletheia

./: .gitignore  .gitmodules  CMakeLists.txt  README.md
cmake/: CMakeLists.txt
cmake/clang/: CMakeLists.txt
cmake/gcc/: CMakeLists.txt
include/aletheia/: test.h
include/aletheia/util/: string.h
projects/aletheia/: CMakeLists.txt
projects/aletheia/include/aletheia/: test.h
projects/aletheia/test/unit/src/aletheia/: test-bootstrap.c  test.c
projects/aletheia/test/unit/src/aletheia/util/: string-bootstrap.c
projects/kitchen-sink/: CMakeLists.txt
projects/kitchen-sink/include/kitchen-sink/: align.h  alloc.h  error.h  macros.h  types.h
projects/kitchen-sink/include/kitchen-sink/alloc/: alloc.h
projects/kitchen-sink/include/kitchen-sink/backends/: backends.h
projects/kitchen-sink/include/kitchen-sink/backends/internal/: alloc.h
projects/kitchen-sink/include/kitchen-sink/backends/libc/: alloc.h
projects/kitchen-sink/include/kitchen-sink/internal/alloc/: alloc.h
projects/kitchen-sink/src/kitchen-sink/: align.c  alloc.c  error.c  example.c
projects/kitchen-sink/src/kitchen-sink/backends/libc/: alloc.c
src/aletheia/: test.c
src/aletheia/util/: string.c
test/unit/src/aletheia/: test.c
